--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "validator",
   "version": "1.0.0",
   "description": "Express framework json object(req) validator.",
-  "main": "/src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
